--- a/Word2Vector_rf_3.ipynb
+++ b/Word2Vector_rf_3.ipynb
@@ -434,6 +434,277 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.,  6., 10.,  2., 10.,  8., 10.,  8., 10.,  6.,  8.,  2.,  8.,\n",
+       "        8.,  2., 10., 10.,  8.,  8., 10.,  2.,  8.,  8., 10.,  1.,  2.,\n",
+       "       10., 10.,  8., 10.,  2.,  8., 10., 10., 10., 10., 10.,  8., 10.,\n",
+       "        2., 10., 10., 10.,  8.,  2., 10.,  6.,  9.,  7.,  2.,  2.,  8.,\n",
+       "       10.,  8., 10.,  2.,  8., 10.,  2., 10.,  4.,  8., 10., 10.,  6.,\n",
+       "        8., 10.,  2.,  8., 10.,  8., 10.,  2.,  6., 10., 10., 10., 10.,\n",
+       "       10.,  4., 10.,  8., 10., 10., 10.,  8.,  8.,  8., 10., 10.,  6.,\n",
+       "       10., 10., 10.,  8., 10., 10., 10.,  6., 10., 10., 10., 10.,  8.,\n",
+       "        8.,  8.,  6., 10.,  8.,  2., 10.,  8., 10., 10.,  6.,  8.,  4.,\n",
+       "        2.,  8., 10.,  8.,  2.,  8., 10.,  6.,  6.,  8., 10.,  2., 10.,\n",
+       "        2.,  6.,  8.,  8., 10., 10.,  8.,  8.,  8., 10., 10.,  8., 10.,\n",
+       "       10.,  8., 10., 10., 10., 10., 10.,  8.,  6.,  2.,  6., 10., 10.,\n",
+       "       10., 10., 10., 10.,  2., 10.,  8.,  6., 10.,  8., 10., 10., 10.,\n",
+       "       10., 10., 10.,  8., 10.,  6.,  8.,  8.,  6.,  4., 10.,  8.,  8.,\n",
+       "       10., 10.,  2.,  2., 10.,  4., 10.,  6.,  8., 10., 10., 10., 10.,\n",
+       "       10., 10.,  6.,  8.,  8.])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred=clf_rf.predict(Xtr)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.,\n",
+       "       10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.,\n",
+       "       10., 10., 10., 10., 10.,  4., 10., 10., 10.,  8., 10., 10., 10.,\n",
+       "       10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_v=clf_rf.predict(Xval)\n",
+    "y_pred_v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_pred_v</th>\n",
+       "      <th>yval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   y_pred_v  yval\n",
+       "0      10.0   8.0\n",
+       "1      10.0  10.0\n",
+       "2      10.0  10.0\n",
+       "3      10.0   2.0\n",
+       "4      10.0  10.0\n",
+       "5      10.0  10.0\n",
+       "6      10.0   8.0\n",
+       "7      10.0  10.0\n",
+       "8      10.0  10.0\n",
+       "9      10.0   4.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(list(zip(y_pred_v, yval)),\n",
+    "                                 columns = ['y_pred_v', 'yval'])\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy=accuracy_score(ytr, y_pred)\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.48\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy=accuracy_score(yval, y_pred_v)\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       1.00      1.00      1.00         1\n",
+      "         2.0       1.00      1.00      1.00        23\n",
+      "         4.0       1.00      1.00      1.00         6\n",
+      "         6.0       1.00      1.00      1.00        19\n",
+      "         7.0       1.00      1.00      1.00         1\n",
+      "         8.0       1.00      1.00      1.00        53\n",
+      "         9.0       1.00      1.00      1.00         1\n",
+      "        10.0       1.00      1.00      1.00        96\n",
+      "\n",
+      "    accuracy                           1.00       200\n",
+      "   macro avg       1.00      1.00      1.00       200\n",
+      "weighted avg       1.00      1.00      1.00       200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(ytr, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.00      0.00      0.00         1\n",
+      "         2.0       0.00      0.00      0.00         3\n",
+      "         4.0       0.00      0.00      0.00         2\n",
+      "         6.0       0.00      0.00      0.00         5\n",
+      "         8.0       0.00      0.00      0.00        11\n",
+      "         9.0       0.00      0.00      0.00         2\n",
+      "        10.0       0.50      0.92      0.65        26\n",
+      "\n",
+      "    accuracy                           0.48        50\n",
+      "   macro avg       0.07      0.13      0.09        50\n",
+      "weighted avg       0.26      0.48      0.34        50\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(yval, y_pred_v))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
