--- a/Word2Vector_rf_6.ipynb
+++ b/Word2Vector_rf_6.ipynb
@@ -186,35 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Преобразуем время\n",
-    "# Разделение времени на год и месяц\n",
-    "#total_data['date'] = total_data['date'].apply(pd.to_datetime)\n",
-    "#total_data['year'] = total_data['date'].apply(lambda x: x.year)\n",
-    "#total_data['month'] = total_data['date'].apply(lambda x: x.month)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Валидация\n",
-    "#train = total_data[(total_data['year']<=2015) & (total_data.lang == 'en')].dropna()\n",
-    "#validation = total_data[(total_data['year']>2015) & (total_data.lang == 'en')].dropna()\n",
-    "\n",
     "data = total_data[(total_data.lang == 'en')]\n",
-    "data = train[['score', 'extract']]\n",
+    "data = data[['score', 'extract']]\n",
     "data = data.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -231,18 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#у нас есть nan, поэтому преобразуем их к строке\n",
-    "#data['content_clear'] = data['extract'].apply(str)\n",
     "data['content_clear'] = data['extract'].apply(review_to_wordlist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -282,15 +263,6 @@
     "import gensim\n",
     "from gensim.models import word2vec\n",
     "from multiprocessing import cpu_count\n",
-    "\n",
-    "######## Тренировка модели\n",
-    "# size - размер вектора\n",
-    "#min_count - игнорирует все слова с total frequency меньше заданного значения\n",
-    "#workers - количество ядер PC\n",
-    "#window - максимальная дистанция между текущем словом и прогнозируемом в предложении\n",
-    "\n",
-    "#model_w2v = word2vec.Word2Vec(data['content_clear'], size=50, window=10, workers=cpu_count())\n",
-    "\n",
     "\n",
     "######## Скачивание готовой натренированной модели \n",
     "model_w2v = gensim.models.KeyedVectors.load_word2vec_format('D:\\Coding\\Word2vec\\GoogleNews-vectors-negative300.bin\\GoogleNews-vectors-negative300.bin', binary=True)\n",
@@ -338,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +341,7 @@
        "(49093, 300)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +455,7 @@
        "Name: score, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +475,7 @@
        "'multiclass'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +508,7 @@
        "Name: score, dtype: int32"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +535,7 @@
        "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +556,7 @@
        "array([ 9, 10,  2,  1, 10, 10,  9, 10,  8,  9])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,16 +568,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([10, 10,  8,  8, 10,  2,  8,  8,  8,  8])"
+       "array([10, 10,  8,  8, 10,  2,  8,  8,  8, 10])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +665,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>8</td>\n",
+       "      <td>10</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -743,17 +715,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>9</td>\n",
+       "      <td>10</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>8</td>\n",
+       "      <td>10</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -773,12 +745,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>10</td>\n",
+       "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -788,12 +760,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>6</td>\n",
+       "      <td>10</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -811,7 +783,7 @@
        "6          8  10.0\n",
        "7          8   8.0\n",
        "8          8  10.0\n",
-       "9          8   7.0\n",
+       "9         10   7.0\n",
        "10         8   9.0\n",
        "11        10   8.0\n",
        "12         2   2.0\n",
@@ -821,20 +793,20 @@
        "16         8   8.0\n",
        "17         6   6.0\n",
        "18        10   8.0\n",
-       "19         9   8.0\n",
-       "20         8   7.0\n",
-       "21        10   2.0\n",
+       "19        10   8.0\n",
+       "20        10   7.0\n",
+       "21         8   2.0\n",
        "22         2   6.0\n",
        "23        10   9.0\n",
        "24         8   8.0\n",
-       "25        10   8.0\n",
-       "26        10   1.0\n",
+       "25         8   8.0\n",
+       "26         2   1.0\n",
        "27        10   8.0\n",
-       "28         2   2.0\n",
-       "29         6   8.0"
+       "28         4   2.0\n",
+       "29        10   8.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -867,14 +839,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3415838528485896\n"
+      "0.33510277143386213\n"
      ]
     }
    ],
@@ -885,16 +857,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3415838528485896"
+       "0.33510277143386213"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +891,7 @@
       "           3       1.00      1.00      1.00       551\n",
       "           4       1.00      1.00      1.00      2418\n",
       "           5       1.00      1.00      1.00      1026\n",
-      "           6       1.00      1.00      1.00      3656\n",
+      "           6       1.00      0.99      1.00      3656\n",
       "           7       1.00      1.00      1.00      1286\n",
       "           8       1.00      1.00      1.00      7429\n",
       "           9       1.00      1.00      1.00      3258\n",
@@ -940,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -950,19 +922,19 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           1       0.50      0.00      0.01       315\n",
-      "           2       0.42      0.37      0.39      1689\n",
+      "           2       0.40      0.36      0.38      1689\n",
       "           3       0.00      0.00      0.00       250\n",
       "           4       0.32      0.02      0.03      1192\n",
-      "           5       1.00      0.00      0.00       528\n",
-      "           6       0.34      0.04      0.07      1746\n",
+      "           5       0.33      0.00      0.00       528\n",
+      "           6       0.35      0.03      0.06      1746\n",
       "           7       1.00      0.00      0.00       648\n",
-      "           8       0.29      0.39      0.33      3699\n",
-      "           9       0.19      0.01      0.01      1552\n",
+      "           8       0.28      0.38      0.32      3699\n",
+      "           9       0.17      0.01      0.01      1552\n",
       "          10       0.36      0.73      0.48      4582\n",
       "\n",
       "    accuracy                           0.34     16201\n",
-      "   macro avg       0.44      0.16      0.13     16201\n",
-      "weighted avg       0.37      0.34      0.26     16201\n",
+      "   macro avg       0.37      0.15      0.13     16201\n",
+      "weighted avg       0.34      0.34      0.26     16201\n",
       "\n"
      ]
     }
