--- a/Word2Vector_rf_6.ipynb
+++ b/Word2Vector_rf_6.ipynb
@@ -180,13 +180,13 @@
     "    #3) - удаление stopwords из списка слов\n",
     "    words = [w for w in words if not w in stops]\n",
     "    #4) - лемматизация слов\n",
-    "    #words = [morph.parse(w)[0].normal_form for w in words ]\n",
+    "    words = [morph.parse(w)[0].normal_form for w in words ]\n",
     "    return(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,29 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('telephone', 0.8224020600318909),\n",
-       " ('cell_phone', 0.7831966876983643),\n",
-       " ('cellphone', 0.7629485130310059),\n",
-       " ('Phone', 0.7060797810554504),\n",
-       " ('phones', 0.6894922256469727),\n",
-       " ('landline', 0.6263927221298218),\n",
-       " ('voicemail', 0.6252243518829346),\n",
-       " ('caller_id', 0.6023745536804199),\n",
-       " ('RingCentral_cloud_computing', 0.5935890674591064),\n",
-       " ('telephones', 0.5929964780807495)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Посмотрим чему выучилась модель:\n",
     "#model_w2v.wv.most_similar(positive=['phone'])"
@@ -310,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +321,7 @@
        "(49093, 300)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +435,7 @@
        "Name: score, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +455,7 @@
        "'multiclass'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +488,7 @@
        "Name: score, dtype: int32"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +515,7 @@
        "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +536,7 @@
        "array([ 9, 10,  2,  1, 10, 10,  9, 10,  8,  9])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,16 +548,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([10, 10,  8,  8, 10,  2,  8,  8,  8, 10])"
+       "array([10, 10,  8,  8, 10,  6,  8,  8,  8, 10])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +625,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -680,7 +660,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2</td>\n",
+       "      <td>10</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -710,27 +690,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>8</td>\n",
+       "      <td>10</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>2</td>\n",
+       "      <td>10</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -740,12 +720,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>8</td>\n",
+       "      <td>10</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
-       "      <td>8</td>\n",
+       "      <td>10</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -755,17 +735,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -779,34 +759,34 @@
        "2          8   6.0\n",
        "3          8   6.0\n",
        "4         10   9.0\n",
-       "5          2   4.0\n",
+       "5          6   4.0\n",
        "6          8  10.0\n",
        "7          8   8.0\n",
        "8          8  10.0\n",
        "9         10   7.0\n",
        "10         8   9.0\n",
        "11        10   8.0\n",
-       "12         2   2.0\n",
+       "12        10   2.0\n",
        "13        10   6.0\n",
        "14        10   7.0\n",
        "15        10   8.3\n",
        "16         8   8.0\n",
        "17         6   6.0\n",
-       "18        10   8.0\n",
-       "19        10   8.0\n",
-       "20        10   7.0\n",
-       "21         8   2.0\n",
-       "22         2   6.0\n",
+       "18         8   8.0\n",
+       "19         8   8.0\n",
+       "20         8   7.0\n",
+       "21        10   2.0\n",
+       "22        10   6.0\n",
        "23        10   9.0\n",
-       "24         8   8.0\n",
-       "25         8   8.0\n",
+       "24        10   8.0\n",
+       "25        10   8.0\n",
        "26         2   1.0\n",
-       "27        10   8.0\n",
-       "28         4   2.0\n",
-       "29        10   8.0"
+       "27         8   8.0\n",
+       "28         2   2.0\n",
+       "29         8   8.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -839,14 +819,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.33510277143386213\n"
+      "0.34078143324486143\n"
      ]
     }
    ],
@@ -857,16 +837,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.33510277143386213"
+       "0.34078143324486143"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +871,7 @@
       "           3       1.00      1.00      1.00       551\n",
       "           4       1.00      1.00      1.00      2418\n",
       "           5       1.00      1.00      1.00      1026\n",
-      "           6       1.00      0.99      1.00      3656\n",
+      "           6       1.00      1.00      1.00      3656\n",
       "           7       1.00      1.00      1.00      1286\n",
       "           8       1.00      1.00      1.00      7429\n",
       "           9       1.00      1.00      1.00      3258\n",
@@ -912,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -921,20 +901,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.50      0.00      0.01       315\n",
-      "           2       0.40      0.36      0.38      1689\n",
+      "           1       1.00      0.00      0.01       315\n",
+      "           2       0.41      0.37      0.39      1689\n",
       "           3       0.00      0.00      0.00       250\n",
-      "           4       0.32      0.02      0.03      1192\n",
-      "           5       0.33      0.00      0.00       528\n",
-      "           6       0.35      0.03      0.06      1746\n",
+      "           4       0.28      0.02      0.03      1192\n",
+      "           5       1.00      0.00      0.00       528\n",
+      "           6       0.28      0.03      0.06      1746\n",
       "           7       1.00      0.00      0.00       648\n",
-      "           8       0.28      0.38      0.32      3699\n",
-      "           9       0.17      0.01      0.01      1552\n",
+      "           8       0.29      0.40      0.33      3699\n",
+      "           9       0.20      0.01      0.01      1552\n",
       "          10       0.36      0.73      0.48      4582\n",
       "\n",
       "    accuracy                           0.34     16201\n",
-      "   macro avg       0.37      0.15      0.13     16201\n",
-      "weighted avg       0.34      0.34      0.26     16201\n",
+      "   macro avg       0.48      0.16      0.13     16201\n",
+      "weighted avg       0.37      0.34      0.26     16201\n",
       "\n"
      ]
     }
